--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "file-loader": "^0.10.0",
     "friendly-errors-webpack-plugin": "^1.1.3",
     "function-bind": "^1.1.0",
+    "happypack": "^4.0.0",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
     "inject-loader": "^2.0.1",
@@ -78,6 +79,7 @@
     "mockjs": "^1.0.1-beta3",
     "nightwatch": "^0.9.12",
     "node-sass": "^4.5.3",
+    "open-browser-webpack-plugin": "0.0.5",
     "opn": "^4.0.2",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "ora": "^1.1.0",
